# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.53 2004/05/22 00:42:59 zhen Exp $

  21 May 2004; John Davis <zhen@gentoo.org> arch/sparc.py, arch/sparc64.py,
  livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh:
  sparc fixup patches from gustavoz at g.org

  20 May 2004; John Davis <zhen@gentoo.org> modules/livecd_stage2_target.py:
  added support for blacklisting modules via hotplug in livecd-stage2. spec key
  is livecd/modblacklist

  19 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, modules/livecd_stage2_target.py,
  livecd/runscript/x86-archscript.sh:
  added support for livecd/overlay, changed vga=0x317 to vga=791
  in the x86 archscript as it is a more standard setting and should
  work on more hardware

  17 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, livecd/runscript/x86-archscript.sh,
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  fixes for the genkernel arg handling - we can now do it on a per-kernel basis.
  we also now have basic motd copying support for more branded livecds

  16 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/kmerge.sh, modules/livecd_stage2_target.py:
  added a feature to the livecd-stage2 specfile called "livecd/genkernel_args"
  for passing args to genkernel. gmsoft@gentoo.org requested this one.

  16 May 2004; John Davis <zhen@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/generic_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage3_target.py,
  modules/tinderbox_target.py, targets/stage1/stage1-preclean2-chroot.sh: