@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/livecdfs-update.sh,v 1.2 2004/05/18 02:09:57 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/livecdfs-update.sh,v 1.3 2004/05/22 05:51:06 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -59,4 +59,15 @@ fi
 if [ "${clst_livecd_type}" = "gentoo-release-minimal" ]
 then
 	sed -i -e 's/^##GREETING/Welcome to the Gentoo Linux Minimal Installation LiveCD!/' /etc/motd
+fi
+
+# setup bootsplash (if called for)
+if [ -n ${clst_livecd_bootsplash} ]
+then
+	if [ -d /etc/bootsplash/${clst_livecd_bootsplash} ]
+	then
+		sed -i 's/BOOTSPLASH_THEME=\"gentoo\"/\"${clst_livecd_bootsplash}\"/' /etc/conf.d/bootsplash
+	else
+		exit 1
+	fi
 fi
