@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.53 2004/05/22 00:42:59 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.54 2004/05/22 05:51:06 zhen Exp $
+
+  22 May 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript-support/kmerge.sh,
+  livecd/runscript-support/livecdfs-update.sh,
+  modules/livecd_stage2_target.py:
+  added key livecd/bootsplash
 
   21 May 2004; John Davis <zhen@gentoo.org> arch/sparc.py, arch/sparc64.py,
   livecd/runscript/sparc-archscript.sh,
